<resources>
    <string name="app_name">车辆设置</string>
    <string name="switch_turn_on">已开启</string>
    <string name="switch_turn_off">已关闭</string>
    <string name="author_">作者：</string>
    <string name="result_failure">获取失败</string>
    <string name="label_search_history">历史查询</string>
    <string name="label_search_result">查询结果</string>
    <string name="tips_search_content">输入的内容不能为空</string>
    <string name="btn_close">关闭</string>
    <string name="oil_92h_">92号：</string>
    <string name="oil_95h_">95号：</string>
    <string name="oil_98h_">98号：</string>
    <string name="oil_0h_">0号：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table0">常用</string>
    <string name="table1">车门与车窗</string>
    <string name="table2">灯光设置</string>
    <string name="table3">车辆音效</string>
    <string name="table4">驾驶辅助</string>
    <string name="table5">行车</string>
    <string name="table6">BEIJING OS</string>
    <string name="back_navigation">返回</string>
    <string name="car_door">车门</string>
    <string name="car_window">车窗</string>
    <string name="car_trunk">电动尾门</string>
    <string name="car_mirror">外后视镜</string>
    <string name="car_door_smart">车门智能进入</string>
    <string name="car_nfc_disable">NFC卡禁用</string>
    <string name="acc_off_auto_unlock">熄火自动解锁</string>
    <string name="drive_auto_lock">行车自动落锁</string>
    <string name="unlock_fron">仅解锁左前门</string>
    <string name="four_door_unlock">四门解锁</string>
    <string name="vcu_cabin_wheel">方向盘</string>
    <string name="vcu_cabin_seat">座椅</string>
    <string name="vcu_cabin_air_conditioner">空调</string>
    <string name="vcu_cabin_safety">安全</string>
    <string name="vcu_cabin_instrument">仪表</string>
    <string name="vcu_cabin_other">其他</string>
    <string name="vcu_cabin_instrument_title">仪表主题随驾驶模式联动</string>
    <string name="cabin_ac_auto_arid">空调自干燥</string>
    <string name="cabin_ac_auto_demist">自动除雾</string>
    <string name="cabin_ac_auto_wind_advance">预通风功能</string>
    <string name="cabin_ac_auto_comfort">自动空调舒适性</string>
    <string name="cabin_safe_fortify_tone">设防提示音</string>
    <string name="cabin_safe_lock_car">锁车成功提示音</string>
    <string name="cabin_safe_lock_car_error">锁车失败提示音</string>
    <string name="cabin_safe_fortify_success_tone">设防成功提示音</string>
    <string name="cabin_safe_fortify_failure_tone">设防失败提示音</string>
    <string name="cabin_safe_video_safe_mode">视频安全模式</string>
    <string name="cabin_safe_video_safe_mode_content">视频安全模式开启后，⻋速\n⼤于15km/h时，部分视频\n将⾃动关闭。</string>
    <string name="cabin_wheel_electronic_mode">电子助力转向模式</string>
    <string name="cabin_wheel_press_key">方向盘自定义按键</string>
    <string name="cabin_wheel_custom_button">方向盘自定义按钮</string>
    <string name="cabin_wheel_press_key_tv">隐私模式</string>
    <string name="cabin_wheel_automatic_heating">方向盘自动加热</string>
    <string name="cabin_wheel_automatic_heating_close">方向盘自动加热已关闭</string>
    <string name="cabin_wheel_automatic_heating_tv">已关闭</string>
    <string name="cabin_wheel_turn_screen">熄屏</string>
    <string name="cabin_wheel_navigation">导航</string>
    <string name="cabin_wheel_starting_temperature">自动加热起始温度</string>
    <string name="cabin_seat_welcomes_guests">主驾迎宾</string>
    <string name="cabin_seat_welcomes_guests_close">主驾迎宾已关闭</string>
    <string name="cabin_seat_fork_welcome_close">副驾迎宾已关闭</string>
    <string name="cabin_seat_close">已关闭</string>
    <string name="cabin_seat_copilot_guests">副驾迎宾</string>
    <string name="cabin_seat_copilot_guests_position">副驾迎宾位置</string>
    <string name="cabin_seat_automatic_heating">座椅自动加热</string>
    <string name="cabin_seat_automatic_heating_close">座椅自动加热已关闭</string>
    <string name="cabin_seat_set_up">请先设置副驾常用位置和迎宾位置</string>
    <string name="cabin_seat_passenger_safety">开启后，副驾座椅移动时，请注意后排乘客安全</string>
    <string name="cabin_seat_common_location">常用位置</string>
    <string name="cabin_seat_welcome_location">迎宾位置</string>
    <string name="cabin_seat_not_saved">未保存</string>
    <string name="cabin_seat_screen_modify">去空调屏修改</string>
    <string name="cabin_seat_copilot_lower">副驾下车</string>
    <string name="cabin_seat_copilot_top">副驾上车</string>
    <string name="cabin_other_trailer_remind">拖车提醒</string>
    <string name="cabin_other_trailer_remind_content">车辆被摇曳、牵引超过设定\n的提醒距离时，将通过APP\n或短信提醒车主。</string>
    <string name="cabin_other_close">已关闭</string>
    <string name="cabin_other_battery_optimization">智能电源管家</string>
    <string name="cabin_other_battery_optimization_content">监控车辆电能消耗情况，低\n电量状态下，对整车舒适性\n功能（空调、大屏等）进行\n管理。</string>
    <string name="cabin_other_wireless_charging">无线充电</string>
    <string name="cabin_other_wireless_charging_abnormal_work">无线充电工作异常</string>
    <string name="cabin_other_maintenance">请尽快前往官方指定维修点进行检测</string>
    <string name="cabin_other_wireless_charging_lamp">储物盒灯</string>
    <string name="cabin_other_sensor_sensitivity">传感器灵敏度</string>
    <string name="cabin_other_trailer_remind_distance">拖车提醒距离</string>
    <string name="cabin_other_toast_content">车辆被拖时无法收到相关提醒</string>
    <string name="cabin_other_toast_content_open">已开启</string>
    <string name="cabin_other_wireless_charging_working_properly">无线充电工作正常</string>
    <string name="cabin_other_foreign_matter">检测到金属异物，请移开异物</string>
    <string name="cabin_other_temperatire">无线充电温度过高，请移开手机</string>
    <string name="cabin_other_determine">确定</string>
    <string name="cabin_other_wireless_charging_lamp_open">储物盒灯已打开</string>
    <string name="cabin_other_wireless_charging_lamp_close">储物盒灯已关闭</string>
    <string name="cabin_other_wireless_charging_open">无线充电已打开</string>
    <string name="cabin_other_wireless_charging_close">无线充电已关闭</string>
    <string name="note_users_title">用户须知</string>
    <string name="note_users_content">为了确保安全使⽤⼿机⽆线充电功能，请您务必阅读并完全理解以下注意事项并仅可按照提示使⽤该功能：\n
1、仅可给兼容Qi⽆线充电标准的设备充电，充电设备需放置于充电槽中⼼位置即充电范围内，以免造成充电断续、充电效率下降的情况出现；\n
2、为避免⼲扰⻋辆启动，在⻋辆认证钥匙过程中⽆线充电功能会中断，待⻋辆钥匙认证完成后⽆线充电功能即可恢复；\n
3、请勿将⾦属物体放在或留在充电板表⾯和充电设备之间；尤其注意硬币、钥匙、戒指、⾸饰、公交卡与银⾏卡等类似物品；\n
4、如果将不兼容Qi⽆线充电标准的设备或⾦属异物放在充电区域内，则充电可能会中断，物体会变热，进⽽可能会损坏充电板，待物体冷却后，将其移除。</string>
    <string name="note_users_agree">确定</string>
    <string name="note_users_cancel">取消</string>
    <string name="car_window_remote_control">遥控升窗/降窗</string>
    <string name="car_window_lock_car">锁车自动关窗</string>
    <string name="car_window_rainy_day">雨天自动关窗</string>
    <string name="car_window_wiper">雨刮维修</string>
    <string name="car_window_lock_content">&#160;功能开启后，可通过钥匙遥\n
        控关闭/开启四门车窗</string>
    <string name="car_window_rainy_content">&#160;OFF档，雨量传感器检测下雨\n
        且车窗/天窗打开时，自动关闭\n
        车窗/天窗；在一个上电周期内\n
        ，若人为控制打开车窗/天窗，\n
        不再自动关闭车窗/天窗。功能\n
        保留24小时。
        </string>
    <string name="car_window_lock_car_content">&#160;功能开启后，锁门时，四门车\n
        窗、天窗和遮阳帘自动关闭</string>
    <string name="car_window_wiper_content">&#160;对⻛挡玻璃⾬刮器进⾏维护\n
        操作时，务必打开⾬刮维修\n
        模式。打开⾬刮维修，⾬刮\n
        将⾃动运⾏⾄维修位置。</string>
    <string name="wheel_automatic_heating_content">&#160;携带智能钥匙靠近或离开车\n
        辆一定距离时，车门将自动\n
        解锁或闭锁。</string>
    <string name="car_trunk_electric_function">电动尾门电动功能</string>
    <string name="car_trunk_intelligence_into">电动尾门智能进入</string>
    <string name="car_trunk_intelligence_into_explain">车门智能进入开关需打开</string>
    <string name="car_trunk_height_adjustment">尾门高度调节</string>
    <string name="car_trunk_light_flashing">灯光闪烁报警</string>
    <string name="car_trunk_buzzer_alarms">蜂鸣器报警开关</string>
    <string name="car_trunk_door_height">尾门高度调节</string>
    <string name="car_trunk_keep_unlock">携带钥匙在解锁区域保持解锁</string>
    <string name="car_trunk_action_unlock">携带钥匙完成退出进入动作解锁</string>
    <string name="car_trunk_buzzer_open">蜂鸣器报警已开启</string>
    <string name="car_trunk_buzzer_close">蜂鸣器报警已关闭</string>
    <string name="car_trunk_light_open">灯光闪烁报警已开启</string>
    <string name="car_trunk_light_close">灯光闪烁报警已关闭</string>
    <string name="car_trunk_round_trip_type">往返式</string>
    <string name="car_trunk_stay_mode">停留式</string>
    <string name="car_trunk_content">&#160;往返式：携带合法智能钥匙\n
        进⼊后备箱感应区域内，然\n
        后退出此区域，再次进⼊感\n
        应区域，电动尾⻔⾃动开\n
        启；\n
        停留式：携带合法智能钥匙\n
        进⼊后备箱感应区域内，原\n
        地站⽴6s以上，电动尾⻔⾃\n
        动开启。</string>
    <string name="car_trunk_height_content">&#160;电动尾⻔⾼度调节建议：\n
       身⾼1.6⽶以下的⽤户使⽤，建议开启⾼度为80%；\n
       身⾼1.6-1.7⽶的⽤户使⽤，建议开启⾼度为90%；\n
       身⾼1.7⽶以上的⽤户使⽤，建议开启⾼度为100%。\n
       相关⾼度调节建议，仅供参考</string>
    <string name="car_mirror_automatic_folding">外后视镜自动折叠</string>
    <string name="car_mirror_automatic_folding_close">后视镜自动折叠已关闭</string>
    <string name="car_mirror_automatic_folding_open">后视镜自动折叠已开启</string>
    <string name="car_mirror_automatic_under_double">倒车后视镜下翻</string>
    <string name="car_mirror_angle">修改角度</string>
    <string name="car_mirror_cancel">取消</string>
    <string name="car_mirror_set">开始设置</string>
    <string name="car_mirror_save_set">保存设置</string>
    <string name="car_mirror_cancel_set">取消保存</string>
    <string name="car_mirror_dialog_title">倒⻋后视镜⻆度设置</string>
    <string name="car_mirror_pop_title">请在车门物理按键上调节</string>
    <string name="car_mirror_pop_content">2分钟倒计时结束后自动保存当前位置</string>
    <string name="car_mirror_dialog_btn">保存设置</string>
    <string name="car_mirror_dialog_content">&#160;请在⻋⻔的物理按键上调节\n
        在2分钟之内完成设置，2分钟倒计时结\n
        束后⾃动保存当前位置</string>
    <string name="ac_open_window">一键开窗</string>
    <string name="ac_close_window">一键关窗</string>
    <string name="ac_refresh_window">一键重置</string>
    <string name="drive_tab_intelligent_cruise">智能巡航</string>
    <string name="drive_tab_forward_assist">前向辅助</string>
    <string name="drive_tab_lane_assist">车道辅助</string>
    <string name="drive_tab_rear_assist">侧后辅助</string>
    <string name="drive_tab_lighting_assist">灯光辅助</string>
    <string name="drive_tab_traffic">交通标志</string>
    <string name="drive_intelligent_cruise_assistant">智能巡航辅助IACC</string>
    <string name="drive_full_speed_range">全速范围内为驾驶员提供车辆的横纵向辅助</string>
    <string name="drive_open">已开启</string>
    <string name="drive_close">已关闭</string>
    <string name="drive_warning_fcw">前碰撞预警FCW</string>
    <string name="drive_fcw_txt_content">检测到前向预警碰撞风险时预警驾驶员</string>
    <string name="drive_sensitivity_setting">灵敏度设置</string>
    <string name="drive_sensitivity">灵敏度</string>
    <string name="drive_aeb_title">自动紧急制动AEB</string>
    <string name="drive_aeb_content">检测到危险情况时产生一个短促制动</string>
    <string name="drive_Lane_assist_system">车道辅助系统</string>
    <string name="drive_Lane_assist_system_content">车道赋值功能请到空调屏进行开启或关闭</string>
    <string name="drive_bsd_title">盲区监测BSD</string>
    <string name="drive_bsd_content">提醒驾驶者后方来车情况</string>
    <string name="drive_dow_title">开门预警DOW</string>
    <string name="drive_dow_content">开启车门时识别靠近目标并预警</string>
    <string name="drive_bsd_camera_title">盲区摄像头</string>
    <string name="drive_bsd_camera_content">提供驾驶者右侧视觉盲区图像信息</string>
    <string name="drive_colour_breathing">色彩呼吸</string>
    <string name="drive_music_rhythm">音乐律动</string>
    <string name="drive_car_rhythm">车速律动</string>
    <string name="drive_pm_display">PM2.5显示</string>
    <string name="drive_temperature_rhythm">调温律动</string>
    <string name="drive_close_brake">关闭自动紧急制动</string>
    <string name="drive_close_brake_content">关闭自动紧急制动功能将会同时关闭集\n成式巡航辅助功能，确定关闭吗？</string>
    <string name="drive_agree">确定</string>
    <string name="drive_cancel">取消</string>
    <string name="lighting_intelligent_model">智能模式</string>
    <string name="iacc_details">&#160;智能巡航辅助系统IACC在全速范围内（0~150km/h）为驾驶员提供车辆的纵向和横向辅助。
其中纵向辅助由自适应巡航控制系统ACC实现，控制车辆在车速0～150km/h范围内，与前方车辆进行跟车巡航，或在30
 ~150km/h 范围内，进行定速巡航，也可以设定车辆与前车的时距。
IACC会优先通过识别车道两侧清晰的车道线进行横向辅助控制，此时ACC处于车道线控制模式，仪表IACC图标显示为绿
色，车道线显示为蓝色。当车速低于60km/h 时，若未识别到车道线，也可跟随识别到的前车行驶，此时ACC处于跟车控
制模式，仪表IACC图标显示为绿色，前车显示为蓝色。
智能巡航辅助系统为驾驶辅助类功能，不允许驾驶员脱手驾驶，且该系统无法覆盖全部驾驶场景和交通、天气及道路情
况，即使系统处于激活状态，驾驶员也必须谨慎驾驶并且需要遵守交通规则。</string>
    <string name="global_txt_close">5分钟后您的爱车将自动关闭</string>
    <string name="global_txt_agree">确认</string>
</resources>