<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.common.xui.widget.XUIWrapContentScrollView
            android:id="@+id/cabin_manager_ScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/cabin_manager_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/cabin_manager_left_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.chinatsp.vehicle.settings.widget.TabRadio
                    android:id="@+id/cabin_wheel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:tabText="@string/vcu_cabin_wheel" />

                <com.chinatsp.vehicle.settings.widget.TabRadio
                    android:id="@+id/cabin_seat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:tabText="@string/vcu_cabin_seat" />

                <com.chinatsp.vehicle.settings.widget.TabRadio
                    android:id="@+id/cabin_air_conditioner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:tabText="@string/vcu_cabin_air_conditioner" />

                <com.chinatsp.vehicle.settings.widget.TabRadio
                    android:id="@+id/cabin_safety"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:tabText="@string/vcu_cabin_safety" />

                <com.chinatsp.vehicle.settings.widget.TabRadio
                    android:id="@+id/cabin_instrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:tabText="@string/vcu_cabin_instrument" />

            </LinearLayout>
        </com.common.xui.widget.XUIWrapContentScrollView>

        <FrameLayout
            android:id="@+id/cabin_manager_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cabin_manager_ScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>