<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sound_popup_20"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/x30"
        android:paddingBottom="@dimen/x20">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_title"
            style="@style/dialog_title"
            android:text="@string/car_mirror_dialog_title" />


        <ScrollView
            android:id="@+id/hint_content_scroll_view"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/x10"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_content"
                style="@style/txt_prompt_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/x2"
                android:padding="@dimen/x10"
                android:text="@string/car_mirror_dialog_content"
                android:textSize="@dimen/text_15" />
        </ScrollView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hint_conform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lighting_dialog_txt_bg"
            android:gravity="center"
            android:text="@string/car_mirror_angle"
            android:textColor="@color/xui_config_color_white"
            android:textSize="@dimen/text_14" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>